--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
         <div class="h-top-container">
             <div class="inner">
-                <h1 class="logo" lang="en"><a href="#" title="홈으로 이동"><span>Look</span><span> eSports</span></a></h1>
+                <h1 class="logo" lang="en"><a href="index.html" title="홈으로 이동"><span>Look</span><span> eSports</span></a></h1>
                 <div class="h-top-right">
                     <div class="text-wrap">
                         <a href="#" class="log-in"><strong>로그인</strong></a>
@@ -65,9 +65,9 @@
                 </div>
                 <ul class="mo-menu-list">
                     <li><a href="#">티켓 예매</a></li>
-                    <li><a href="#"><span>일정 및 순위</span><i class='bx bx-plus'></i><i class='bx bx-minus'></i></a>
+                    <li><a href="schedule.html"><span>일정 및 순위</span><i class='bx bx-plus'></i><i class='bx bx-minus'></i></a>
                         <ul class="mo-submenu-list">
-                            <li><a href="#">일정/결과</a></li>
+                            <li><a href="schedule.html">일정/결과</a></li>
                             <li><a href="#">리그 순위</a></li>
                         </ul>
                     </li>
@@ -106,7 +106,7 @@
             <div class="inner">
                 <ul class="gnb-list">
                     <li><a href="#">티켓 예매</a></li>
-                    <li><a href="#">일정 및 순위</a>
+                    <li><a href="schedule.html">일정 및 순위</a>
                         <ul class="submenu-list">
                             <li><a href="#">일정/결과</a></li>
                             <li><a href="#">리그 순위</a></li>
