--- a/schedule.html
+++ b/schedule.html
@@ -28,7 +28,7 @@
     <header>
         <div class="h-top-container">
             <div class="inner">
-                <h1 class="logo" lang="en"><a href="#" title="홈으로 이동"><span>Look</span><span> eSports</span></a></h1>
+                <h1 class="logo" lang="en"><a href="index.html" title="홈으로 이동"><span>Look</span><span> eSports</span></a></h1>
                 <div class="h-top-right">
                     <div class="text-wrap">
                         <a href="#" class="log-in"><strong>로그인</strong></a>
@@ -284,18 +284,7 @@
                             <i class='bx bx-chevron-left'></i>
                         </button>
                         <div class="year-box">
-                            <ul class="year-list">
-                                <li>2022</li>
-                                <li>2023</li>
-                                <li>2024</li>
-                                <li>2025</li>
-                                <li>2026</li>
-                                <li>2027</li>
-                                <li>2028</li>
-                                <li>2029</li>
-                                <li>2030</li>
-                                <li>2031</li>
-                            </ul>
+                            <h3 class="this-year"></h3>
                         </div>
                         <button class="next">
                             <span class="blind">다음 버튼</span>
