--- a/schedule.html
+++ b/schedule.html
@@ -332,6 +332,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="result-wrap kart-result-wrap">
+                    <p class="none-play">경기가 없습니다.</p>
+                </div>
                 <div class="result-wrap lck-result-wrap">
                     <div class="mon jan">
                         <ul class="game-date date-1-18">
@@ -682,149 +685,16 @@
                         </ul>
                     </div>
                 </div>
-            </section>
-            <section class="rank-container">
-                <h2 class="blind">리그 순위</h2>
-                <div class="title-wrap">
-                    <h3 class="league-title" lang="en">2023 LCK SPRING</h3>
-                    <select class="choice-box choice-lck">
-                        <option lang="en" selected>2023 LCK SPRING</option>
-                        <option lang="en">2022 LCK SUMMER</option>
-                        <option lang="en">2022 LCK SPRING</option>
-                    </select>
-                </div>
-                <ul class="lck-rank">
-                    <li class="list-head">
-                        <div class="left">
-                            <span>순위</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">승</span>
-                            <span class="lose">패</span>
-                            <span class="interval">득실차</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">1</span>
-                            <img src="images/t1_c.png" alt="t1">
-                            <span class="team">T1</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">17</span>
-                            <span class="lose">1</span>
-                            <span class="interval">27</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">2</span>
-                            <img src="images/geng_c.png" alt="젠지">
-                            <span class="team">GEN</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">13</span>
-                            <span class="lose">5</span>
-                            <span class="interval">17</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">3</span>
-                            <img src="images/kt_c.png" alt="kt">
-                            <span class="team">KT</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">13</span>
-                            <span class="lose">5</span>
-                            <span class="interval">13</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">4</span>
-                            <img src="images/DK.png" alt="디플러스 기아">
-                            <span class="team">DK</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">12</span>
-                            <span class="lose">6</span>
-                            <span class="interval">12</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">5</span>
-                            <img src="images/hle_c.png" alt="한화생명 이스포츠">
-                            <span class="team">HLE</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">10</span>
-                            <span class="lose">8</span>
-                            <span class="interval">3</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">6</span>
-                            <img src="images/lsb_c.png" alt="리브샌드박스">
-                            <span class="team">LSB</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">10</span>
-                            <span class="lose">8</span>
-                            <span class="interval">1</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">7</span>
-                            <img src="images/kdf_c.png" alt="광동프릭스">
-                            <span class="team">KDF</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">6</span>
-                            <span class="lose">12</span>
-                            <span class="interval">-11</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">8</span>
-                            <img src="images/bro_c.png" alt="브리온">
-                            <span class="team">BRO</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">4</span>
-                            <span class="lose">14</span>
-                            <span class="interval">-18</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">9</span>
-                            <img src="images/drx_c.png" alt="drx">
-                            <span class="team">DRX</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">3</span>
-                            <span class="lose">15</span>
-                            <span class="interval">-20</span>
-                        </div>
-                    </li>
-                    <li class="list-body">
-                        <div class="left">
-                            <span class="total-rank">10</span>
-                            <img src="images/ns_c.png" alt="농심레드포스">
-                            <span class="team">NS</span>
-                        </div>
-                        <div class="right">
-                            <span class="win">2</span>
-                            <span class="lose">16</span>
-                            <span class="interval">-24</span>
-                        </div>
-                    </li>
-                </ul>
+                <div class="result-wrap lckcl-result-wrap"></div>
+                <div class="result-wrap msi-result-wrap"></div>
+                <div class="result wrap worlds-result-wrap"></div>
+                <div class="result wrap league-result-wrap"></div>
+                <div class="result wrap ockl-result-wrap"></div>
+                <div class="result wrap pgc-result-wrap"></div>
+                <div class="result wrap pgi-result-wrap"></div>
+                <div class="result wrap pkg-result-wrap"></div>
+                <div class="result wrap gsl-result-wrap"></div>
+                <div class="result wrap vck-result-wrap"></div>
             </section>
         </div>
     </main>
