--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <ul class="mo-menu-list">
                     <li><a href="#">티켓 예매</a></li>
-                    <li><a href="schedule.html"><span>일정 및 순위</span><i class='bx bx-plus'></i><i class='bx bx-minus'></i></a>
+                    <li><a href="#"><span>일정 및 순위</span><i class='bx bx-plus'></i><i class='bx bx-minus'></i></a>
                         <ul class="mo-submenu-list">
                             <li><a href="schedule.html">일정/결과</a></li>
                             <li><a href="#">리그 순위</a></li>
