--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
             <div class="inner">
                 <ul class="gnb-list">
                     <li><a href="#">티켓 예매</a></li>
-                    <li><a href="schedule.html">일정 및 순위</a>
+                    <li><a href="#">일정 및 순위</a>
                         <ul class="submenu-list">
-                            <li><a href="#">일정/결과</a></li>
+                            <li><a href="schedule.html">일정/결과</a></li>
                             <li><a href="#">리그 순위</a></li>
                         </ul>
                     </li>
@@ -958,6 +958,7 @@
             </div>
         </section>
         <section class="event-container">
+            <h2 class="blind">이벤트 배너</h2>
             <a href="#" class="event-mo" title="2023 lck 스프링 승부예측 이벤트"></a>
         </section>
         <section class="team-container">
@@ -1043,12 +1044,12 @@
                             </li>
                             <li>
                                 <a href="#" title="CHIBLI esports">
-                                    <img src="images/VRLU GHIBLI logo.png" alt="chibli 이스포츠">
+                                    <img src="images/VRLU_GHIBLI_logo.png" alt="chibli 이스포츠">
                                 </a>
                             </li>
                             <li>
                                 <a href="#" title="Danawa esports">
-                                    <img src="images/Danawa e-sports.png" alt="다나와 이스포츠">
+                                    <img src="images/Danawa_e-sports.png" alt="다나와 이스포츠">
                                 </a>
                             </li>
                             <li>
@@ -1059,7 +1060,7 @@
 
                             <li>
                                 <a href="#" title="eagle owls">
-                                    <img src="images/Eagle Owls 2022.png" alt="이글 오울스">
+                                    <img src="images/Eagle_Owls_2022.png" alt="이글 오울스">
                                 </a>
                             </li>
 
@@ -1071,19 +1072,19 @@
 
                             <li>
                                 <a href="#" title="GNL esports">
-                                    <img src="images/GNL ESPORTS 2023.png" alt="gnl 이스포츠">
+                                    <img src="images/GNL_ESPORTS_2023.png" alt="gnl 이스포츠">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" title="GOnGO Prince">
-                                    <img src="images/GoNGo Prince log.png" alt="고앤고 프린스">
+                                    <img src="images/GoNGo_Prince_log.png" alt="고앤고 프린스">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" title="Maru gaming">
-                                    <img src="images/Maru Gaming.png" alt="마루 게이밍">
+                                    <img src="images/Maru_Gaming.png" alt="마루 게이밍">
                                 </a>
                             </li>
 
@@ -1094,7 +1095,7 @@
                             </li>
                             <li>
                                 <a href="#" title="OP.GG esports">
-                                    <img src="images/OPGG SPORTS note.png" alt="opgg 이스포츠">
+                                    <img src="images/OPGG_SPORTS_note.png" alt="opgg 이스포츠">
                                 </a>
                             </li>
                             <li>
@@ -1118,7 +1119,7 @@
                             </li>
                             <li>
                                 <a href="#" title="Maru gaming">
-                                    <img src="images/Maru Gaming.png" alt="마루 게이밍">
+                                    <img src="images/Maru_Gaming.png" alt="마루 게이밍">
                                 </a>
                             </li>
                             <li>
@@ -1135,7 +1136,7 @@
 
                             <li>
                                 <a href="#" title="SPEAR gaming">
-                                    <img src="images/Spear Gaming Log.png" alt="스피어 게이밍">
+                                    <img src="images/Spear_Gaming_Log.png" alt="스피어 게이밍">
                                 </a>
                             </li>
 
@@ -1168,7 +1169,7 @@
                             </li>
                             <li>
                                 <a href="#" title="JNGK">
-                                    <img src="images/JNGK Logo.png" alt="JNGK">
+                                    <img src="images/JNGK_Logo.png" alt="JNGK">
                                 </a>
                             </li>
                             <li>
@@ -1184,13 +1185,13 @@
 
                             <li>
                                 <a href="#" title="Sin Prisa gaming">
-                                    <img src="images/Sin Prisa Gaming.png" alt="Sin Prisa 게이밍">
+                                    <img src="images/Sin_Prisa_Gaming.png" alt="Sin Prisa 게이밍">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" title="SLT">
-                                    <img src="images/SLT logo.png" alt="SLT">
+                                    <img src="images/SLT_logo.png" alt="SLT">
                                 </a>
                             </li>
 
@@ -1208,13 +1209,13 @@
 
                             <li>
                                 <a href="#" title="Team Diamond">
-                                    <img src="images/Team Diamond S2.png" alt="팀 다이아몬드">
+                                    <img src="images/Team_Diamond_S2.png" alt="팀 다이아몬드">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" title="WGS Phoenix">
-                                    <img src="images/WGS Phoenix Logo.png" alt="WGS phoenix">
+                                    <img src="images/WGS_Phoenix_Logo.png" alt="WGS phoenix">
                                 </a>
                             </li>
                         </ul>
@@ -1223,7 +1224,7 @@
                         <ul class="kart-team">
                             <li>
                                 <a href="#" title="GAME COACH">
-                                    <img src="images/Game Coach logo.png" alt="게임 코치">
+                                    <img src="images/Game_Coach_logo.png" alt="게임 코치">
                                 </a>
                             </li>
                             <li>
@@ -1233,7 +1234,7 @@
                             </li>
                             <li>
                                 <a href="#" title="SGA인천">
-                                    <img src="images/SGA Inchon.png" alt="SGA인천">
+                                    <img src="images/SGA_Inchon.png" alt="SGA인천">
                                 </a>
                             </li>
                         </ul>
