--- a/schedule.html
+++ b/schedule.html
@@ -167,110 +167,110 @@
                 <div class="small-scale">
                     <div class="game-box kart-box">
                         <a href="#" class="KRLP">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/kartriderleague_KRPL_meta.jpg" alt="카트라이더 러쉬 플러스">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">KRLP</p>
-                            </figcaption>
+                            </div>
                         </a>
                     </div>
                     <div class="game-box lol-box">
                         <a href="#" class="lck">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/lck_b.png" alt="리그오브레전드 챔피언스 리그">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">LCK</p>
-                            </figcaption>
+                            </div>
                         </a>
                         <a href="#" class="lckcl">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/lck_cl.png" alt="리그오브레전드 챌린저스 리그">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">LCK CL</p>
-                            </figcaption>
+                            </div>
                         </a>
                         <a href="#" class="msi">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/msi.png" alt="리그오브레전드 미드 시즌 인비테이셔널">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">MSI</p>
-                            </figcaption>
+                            </div>
                         </a>
                         <a href="#" class="worlds">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/lol_chams.png" alt="리그오브레전드 월드 챔피언십">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">WORLDS</p>
-                            </figcaption>
+                            </div>
                         </a>
                     </div>
                     <div class="game-box watch-box">
                         <a href="#" class="owol">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/over_league.jpg" alt="오버워치 리그">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">LEAGUE</p>
-                            </figcaption>
+                            </div>
                         </a>
                         <a href="#" class="owct">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/over_contenders.png" alt="오버워치 컨텐더스 코리아">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">OCKL</p>
-                            </figcaption>
+                            </div>
                         </a>
                     </div>
                     <div class="game-box pubg-box">
                         <a href="#" class="pgc">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/PUBG_PGC.png" alt="펍지 글로벌 챔피언십">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">PGC</p>
-                            </figcaption>
+                            </div>
                         </a>
                         <a href="#" class="pgi">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/PUBG_PGI.png" alt="펍지 글로벌 인비테이셔널">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">PGI</p>
-                            </figcaption>
+                            </div>
                         </a>
                         <a href="#" class="pkc">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/PUBG_PKC.png" alt="펍지 코리아 챔피언십">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">PKC</p>
-                            </figcaption>
+                            </div>
                         </a>
                     </div>
                     <div class="game-box star-box">
                         <a href="#" class="gsl">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/star_league.png" alt="글로벌 스타크래프트 리그">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">GSL</p>
-                            </figcaption>
+                            </div>
                         </a>
                     </div>
                     <div class="game-box valo-box">
                         <a href="#" class="vck">
-                            <figure>
+                            <div class="img-box">
                                 <img src="images/valo_league.png" alt="발로란트 챌린저스">
-                            </figure>
-                            <figcaption>
+                            </div>
+                            <div class="img-text">
                                 <p lang="en">VCK</p>
-                            </figcaption>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -284,7 +284,7 @@
                             <i class='bx bx-chevron-left'></i>
                         </button>
                         <div class="year-box">
-                            <h3 class="this-year"></h3>
+                            <h3 class="this-year">2023</h3>
                         </div>
                         <button class="next">
                             <span class="blind">다음 버튼</span>
