--- a/schedule.html
+++ b/schedule.html
@@ -987,41 +987,41 @@
                         <p class="none-play">12월 경기가 없습니다.</p>
                     </div>
                 </div>
-                <div class="result-wrap pkg-result-wrap">
-                    <div class="mon pkgjan">
+                <div class="result-wrap pkc-result-wrap">
+                    <div class="mon pkcjan">
                         <p class="none-play">1월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgfeb">
+                    <div class="mon pkcfeb">
                         <p class="none-play">2월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgmar">
+                    <div class="mon pkcmar">
                         <p class="none-play">3월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgapr">
+                    <div class="mon pkcapr">
                         <p class="none-play">4월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgmay">
+                    <div class="mon pkcmay">
                         <p class="none-play">5월경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgjun">
+                    <div class="mon pkcjun">
                         <p class="none-play">6월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgjul">
+                    <div class="mon pkcjul">
                         <p class="none-play">7월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgaug">
+                    <div class="mon pkcaug">
                         <p class="none-play">8월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgsep">
+                    <div class="mon pkcsep">
                         <p class="none-play">9월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgoct">
+                    <div class="mon pkcoct">
                         <p class="none-play">10월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgnov">
+                    <div class="mon pkcnov">
                         <p class="none-play">11월 경기가 없습니다.</p>
                     </div>
-                    <div class="mon pkgdec">
+                    <div class="mon pkcdec">
                         <p class="none-play">12월 경기가 없습니다.</p>
                     </div>
                 </div>
