--- a/schedule.html
+++ b/schedule.html
@@ -25,6 +25,10 @@
 </head>
 
 <body>
+    <ul class="skip-menu">
+        <li><a href="#main">본문 바로가기</a></li>
+        <li><a href="#footer">하단 바로가기</a></li>
+    </ul>
     <header>
         <div class="h-top-container">
             <div class="inner">
@@ -148,7 +152,7 @@
             </div>
         </div>
     </header>
-    <main class="sub01">
+    <main class="sub01" id="main">
         <div class="inner">
             <div class="select-box">
                 <div class="large-scale">
