--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
 <body>
     <ul class="skip-menu">
-        <li><a href="#main">본문 바로가기</a></li>
+        <li><a href="#visual">배너 바로가기</a></li>
+        <li><a href="#ticket">예매 영역 바로가기</a></li>
+        <li><a href="#schedule">일정 영역 바로가기</a></li>
+        <li><a href="#stadium">경기장 영역 바로가기</a></li>
+        <li><a href="#notice">공지사항 영역 바로가기</a></li>
         <li><a href="#footer">하단 바로가기</a></li>
     </ul>
     <header>
@@ -152,7 +156,7 @@
         </div>
     </header>
     <main id="main">
-        <section class="visual-container">
+        <section class="visual-container" id="visual">
             <h2 class="blind">광고 배너</h2>
             <div class="img-wrapper">
                 <ul class="img-list">
@@ -197,7 +201,7 @@
                 </ul>
             </div>
         </section>
-        <section class="ticket-container">
+        <section class="ticket-container" id="ticket">
             <div class="inner">
                 <div class="top-wrapper">
                     <h2 class="title">예매 진행 중</h2>
@@ -418,7 +422,7 @@
                 </div>
             </div>
         </section>
-        <section class="schedule-container">
+        <section class="schedule-container" id="schedule">
             <h2 class="blind">월간 경기 일정</h2>
             <div class="inner">
                 <div class="schedule-top"></div>
@@ -1245,7 +1249,7 @@
                 </div>
             </div>
         </section>
-        <section class="stadium-container">
+        <section class="stadium-container" id="stadium">
             <h2 class="title">경기장</h2>
             <div class="stadium-wrap">
                 <ul class="stadium-list">
@@ -1424,7 +1428,7 @@
                 </a>
             </div>
         </section>
-        <section class="notice-container">
+        <section class="notice-container" id="notice">
             <h2 class="blind">뉴스, 공지 영역</h2>
             <div class="inner">
                 <article class="news-wrapper">
